fixed overlapped links

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -156,3 +156,13 @@
     #notification-symbol {
         font-size: 24px;
     }
+    
+    a.stretched-link.review-link {
+        z-index: 0;
+        position: static;
+    }
+    
+    .review-section a {
+        z-index: 999;
+        position: relative;
+    }
